Creacion de menus

--- a/menus/.gitignore
+++ b/menus/.gitignore
@@ -1,3 +1,6 @@
 /menuPrincipal.class
 /menuCursos.class
 /menuCurso.class
+/menuInicioSesion.class
+/menuUsuario.class
+/mostrarMenuDespuesInicioSesion.class
