Renovacion de menus

--- a/menus/.gitignore
+++ b/menus/.gitignore
@@ -4,3 +4,6 @@
 /menuInicioSesion.class
 /menuUsuario.class
 /mostrarMenuDespuesInicioSesion.class
+/menuInicio.class
+/menuVista.class
+/menuVisita.class
